3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Documentation, no functional change.
 server/apply.c c_chat.c c_object.c c_party.c c_range.c ob_methods.c ob_types.c
  player.c resurrection.c
Nicolas Weeger 2007-07-29

Documentation, no functional change.
 server/c_move.c c_new.c move.c
Nicolas Weeger 2007-07-29

Documentation, no functional change.
 server/c_wiz.c
Nicolas Weeger 2007-07-27

Documentation, no functional change.
 Doxyfile: enable svn:keywords property. Various tweaks.
New files:
 doc/Developers/archetype.dox artifact.dox client.dox connected.dox general.dox
  mainpage.dox map.dox misc.dox object.dox player.dox region.dox treasure_list.dox
Nicolas Weeger 2007-07-27

Documentation, no functional change.
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 server/spell_attack.c spell_effect.c
Nicolas Weeger 2007-07-26

Documentation, no functional change.
 include/sproto.h: fix paramss to params for coherence.
 server/c_misc.c
Nicolas Weeger 2007-07-25

server/plugins.c: sanity checks on parameters for usual crashing culprit.
Nicolas Weeger 2007-07-25

Documentation, no functional change.
 server/pets.c swap.c
Nicolas Weeger 2007-07-23

Remove unused return values. Fix wrong return for cure_disease. Remove hardcoded value.
 include/sproto.h
 server/disease.c
Nicolas Weeger 2007-07-17

Change function return type for coherence with experience.
 common/exp.c info.c
 include/libproto.h
Nicolas Weeger 2007-07-17

Remove obsolete color_bg handling.
 common/image.c
 lib/collect.pl.in
Nicolas Weeger 2007-07-17

No functional changes - various cleanups to reduce number of compiler warnings