@@ -45,4 +45,6 @@ typedef struct {
 
 extern face_sets facesets[MAX_FACE_SETS];
 
+#define MAX_IMAGE_SIZE 10000
+
 #endif /* IMAGE_H */
