@@ -15,6 +15,12 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Move read_client_images() from socket/ to common/.
+ common/image.c
+ include/image.h libproto.h sockproto.h
+ socket/image.c
+Nicolas Weeger 2007-07-31
+
 Documentation, no functional change.
  server/apply.c c_chat.c c_object.c c_party.c c_range.c ob_methods.c ob_types.c
   player.c resurrection.c
